# lifdetector

./: .gitignore  READEME.md  pyproject.toml
lifdetector/: __init__.py  __main__.py  detection.py  gui.py  lifdetector.ui  review.py
notebooks/: flash_detection.ipynb
