[project]
name = "lifdetector"
version = "0.1.0"
description = "A QT6 GUI app to detect bright flashes in AVI files and generate PDF reports."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "PyQt6",
    "opencv-python",
    "reportlab",
    "numpy"
]
 
[project.scripts]
lifdetector = "lifdetector.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project.scripts]
lifdetector = "lifdetector.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"