[project]
name = "lifdetector"
version = "2025.12.21"
description = "A QT6 GUI app to detect bright flashes in AVI files and generate PDF reports."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "opencv-python",
    "reportlab",
    "numpy",
    "scipy",
    "cupy"
]
 
[project.scripts]
lifdetector = "lifdetector.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lifdetector"]