[project]
name = "lifdetector"
version = "2025.12.21"
description = "A QT6 GUI app to detect bright flashes in AVI files and generate PDF reports."
authors = [
    { name="Your Name", email="your.email@example.com" }
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "PyQt6",
    "opencv-python",
    "reportlab",
    "numpy",
    "scipy",
    "scikit-image",
    "scikit-learn",
    "pandas",
    "matplotlib"
]

[project.optional-dependencies]
# Optional cuda extra requires Windows + CUDA GPU
# Only install [cuda] extra on Windows systems with CUDA-capable GPUs
cuda = [
    # CuPy only supported on Windows
    "cupy; platform_system == 'Windows'",
]
 
[project.scripts]
lifdetector = "lifdetector.__main__:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["lifdetector"]